--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.2",
+        "styled-components": "^5.2.1",
         "typescript": "^4.2.2",
         "web-vitals": "^1.0.1"
     },
@@ -52,6 +53,7 @@
     "devDependencies": {
         "@types/react-big-calendar": "^0.30.0",
         "@types/react-modal": "^3.12.0",
-        "@types/react-router-dom": "^5.1.7"
+        "@types/react-router-dom": "^5.1.7",
+        "@types/styled-components": "^5.1.7"
     }
 }
