--- a/client/package.json
+++ b/client/package.json
@@ -1,59 +1,59 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/react": "^16.6.1",
-    "@types/react-dom": "^16.6.1",
-    "axios": "^0.21.1",
-    "moment": "^2.29.1",
-    "react": "^16.6.1",
-    "react-big-calendar": "^0.32.0",
-    "react-calendar": "^3.3.1",
-    "react-dom": "^16.6.1",
-    "react-icons": "^4.2.0",
-    "react-modal": "^3.12.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.2.2",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=~/Desktop/cert-pem SSL_KEY_FILE=~/Desktop/key.pem react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react-big-calendar": "^0.30.0",
-    "@types/react-modal": "^3.12.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.7"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.31",
+        "@types/react": "^16.6.1",
+        "@types/react-dom": "^16.6.1",
+        "axios": "^0.21.1",
+        "moment": "^2.29.1",
+        "react": "^16.6.1",
+        "react-big-calendar": "^0.32.0",
+        "react-calendar": "^3.3.1",
+        "react-dom": "^16.6.1",
+        "react-icons": "^4.2.0",
+        "react-modal": "^3.12.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.2",
+        "styled-components": "^5.2.1",
+        "typescript": "^4.2.2",
+        "web-vitals": "^1.0.1"
+    },
+    "scripts": {
+        "start": "HTTPS=true SSL_CRT_FILE=~/Desktop/cert.pem SSL_KEY_FILE=~/Desktop/key.pem react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/react-big-calendar": "^0.30.0",
+        "@types/react-modal": "^3.12.0",
+        "@types/react-router-dom": "^5.1.7",
+        "@types/styled-components": "^5.1.7"
+    }
 }
